--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header-bg">
     <div class="header">
-      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft">
+      <a href="#"><img src="./img/bikcraft.svg" alt="Bikcraft">
       </a>
 
       <nav aria-label="primaria">
